# duo_universal_rust

./: Cargo.toml  README.md
examples/demo/: duo_config.toml  main.rs
examples/demo/templates/: login.html.hbs  success.html.hbs
src/: constants.rs  duo_pinned_cert.crt  jwt.rs  lib.rs  models.rs
