[package]
name = "duo_universal_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
toml = "0"
serde = { version = "1", features = ["derive"] }
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
